--- a/templates/index.html
+++ b/templates/index.html
@@ -47,74 +47,80 @@
 <body>
     <h2>Ingrese los datos de la circonita:</h2>
     <form id="predict-form" method="post">
-        <div class="form-group">
-            <label for="carat">Carat:</label>
-            <input type="text" id="carat" name="carat" required>
+        <div class="form-row">
+            <div class="form-column">
+                <label for="carat">Carat:</label>
+                <input type="text" id="carat" name="carat" required>
+            </div>
+            <div class="form-column">
+                <label for="cut">Cut:</label>
+                <select id="cut" name="cut" required>
+                    <option value="Ideal">Ideal</option>
+                    <option value="Premium">Premium</option>
+                    <option value="Very Good">Very Good</option>
+                    <option value="Good">Good</option>
+                    <option value="Fair">Fair</option>
+                </select>
+            </div>
         </div>
-        
-        <div class="form-group">
-            <label for="cut">Cut:</label>
-            <select id="cut" name="cut" required>
-                <option value="Ideal">Ideal</option>
-                <option value="Premium">Premium</option>
-                <option value="Very Good">Very Good</option>
-                <option value="Good">Good</option>
-                <option value="Fair">Fair</option>
-            </select>
+
+        <div class="form-row">
+            <div class="form-column">
+                <label for="color">Color:</label>
+                <select id="color" name="color" required>
+                    <option value="D">D</option>
+                    <option value="E">E</option>
+                    <option value="F">F</option>
+                    <option value="G">G</option>
+                    <option value="H">H</option>
+                    <option value="I">I</option>
+                    <option value="J">J</option>
+                </select>
+            </div>
+            <div class="form-column">
+                <label for="clarity">Clarity:</label>
+                <select id="clarity" name="clarity" required>
+                    <option value="IF">IF</option>
+                    <option value="VVS1">VVS1</option>
+                    <option value="VVS2">VVS2</option>
+                    <option value="VS1">VS1</option>
+                    <option value="VS2">VS2</option>
+                    <option value="SI1">SI1</option>
+                    <option value="SI2">SI2</option>
+                    <option value="I1">I1</option>
+                </select>
+            </div>
         </div>
-        
-        <div class="form-group">
-            <label for="color">Color:</label>
-            <select id="color" name="color" required>
-                <option value="D">D</option>
-                <option value="E">E</option>
-                <option value="F">F</option>
-                <option value="G">G</option>
-                <option value="H">H</option>
-                <option value="I">I</option>
-                <option value="J">J</option>
-            </select>
+
+        <div class="form-row">
+            <div class="form-column">
+                <label for="depth">Depth:</label>
+                <input type="text" id="depth" name="depth" required>
+            </div>
+            <div class="form-column">
+                <label for="table">Table:</label>
+                <input type="text" id="table" name="table" required>
+            </div>
         </div>
-        
-        <div class="form-group">
-            <label for="clarity">Clarity:</label>
-            <select id="clarity" name="clarity" required>
-                <option value="IF">IF</option>
-                <option value="VVS1">VVS1</option>
-                <option value="VVS2">VVS2</option>
-                <option value="VS1">VS1</option>
-                <option value="VS2">VS2</option>
-                <option value="SI1">SI1</option>
-                <option value="SI2">SI2</option>
-                <option value="I1">I1</option>
-            </select>
+
+        <div class="form-row">
+            <div class="form-column">
+                <label for="x">X:</label>
+                <input type="text" id="x" name="x" required>
+            </div>
+            <div class="form-column">
+                <label for="y">Y:</label>
+                <input type="text" id="y" name="y" required>
+            </div>
         </div>
-        
-        <div class="form-group">
-            <label for="depth">Depth:</label>
-            <input type="text" id="depth" name="depth" required>
+
+        <div class="form-row">
+            <div class="form-column">
+                <label for="z">Z:</label>
+                <input type="text" id="z" name="z" required>
+            </div>
         </div>
-        
-        <div class="form-group">
-            <label for="table">Table:</label>
-            <input type="text" id="table" name="table" required>
-        </div>
-        
-        <div class="form-group">
-            <label for="x">X:</label>
-            <input type="text" id="x" name="x" required>
-        </div>
-        
-        <div class="form-group">
-            <label for="y">Y:</label>
-            <input type="text" id="y" name="y" required>
-        </div>
-        
-        <div class="form-group">
-            <label for="z">Z:</label>
-            <input type="text" id="z" name="z" required>
-        </div>
-        
+
         <input type="submit" value="Predecir">
     </form>
     
