--- a/templates/index.html
+++ b/templates/index.html
@@ -46,10 +46,12 @@
         });
     </script>
 </head>
+<p class="top-right">Rigoberto Díaz</p>
+
 <body>
     
     <form id="predict-form" method="post">
-        <p class="desc">modelo predictivo del precio de la piedra</p>
+        <p class="desc">modelo predictivo del precio de la piedra      </p>
         <h3>Ingrese los datos de la zirconia:</h3>
         <div class="form-row">
             <div class="form-column">
