--- a/static/esty.css
+++ b/static/esty.css
@@ -139,3 +139,17 @@ h3 {
     padding:0;
     margin-bottom:0%;
 }
+.top-right {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background-color: rgba(0, 0, 0, 0.3); /* Fondo semitransparente */
+    backdrop-filter: blur(5px); /* Efecto borroso */
+    color: rgba(255, 255, 255, 0.9); /* Texto blanco con opacidad */
+    padding: 10px 20px;
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); /* Sombra suave */
+    z-index: 1000; /* Asegura que esté sobre otros elementos */
+}
