--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Predicción de Precio de zirconias</title>
+    <link rel="icon" type="image/png" href="https://emojicdn.elk.sh/💎">
+
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='esty.css') }}">
     <script>
         document.addEventListener('DOMContentLoaded', function() {
