--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,12 @@
 <body>
     
     <form id="predict-form" method="post">
-        <p class="desc">modelo predictivo del precio de la piedra      </p>
+        <p class="desc">
+            Modelo predictivo del precio de la piedra. 
+            <a href="https://colab.research.google.com/drive/1rIq_yUvEzTNZje7MkCfnx2KPwmVeJmjQ?usp=sharing" target="_blank">
+                Ver código en Colab
+            </a>
+        </p>
         <h3>Ingrese los datos de la zirconia:</h3>
         <div class="form-row">
             <div class="form-column">
